# hoover3

./: .gitignore  .gitmodules  Cargo.toml  README.md  crates.js  fmt.sh  help.html  migrate.sh  rebuild_docs.sh  search-index.js  settings.html  src-files.js  start_client.sh  start_dev_container.sh  start_docker.sh  start_worker.sh  test.sh  todo.md  wipe_docker.sh
docker/: .env  (+4 more)
hoover3_base/hoover3_database/: Cargo.toml
hoover3_base/hoover3_macro/: Cargo.toml
hoover3_base/hoover3_macro2/: Cargo.toml
hoover3_base/hoover3_tracing/: Cargo.toml
hoover3_base/hoover3_types/: Cargo.toml
hoover3_client/: Cargo.toml  Dioxus.toml  README.md  all.html  index.html  sidebar-items.js
hoover3_client/api/: fn.__create_datasource__.html  fn.__create_new_collection__.html  fn.__db_explorer_run_query__.html  fn.__drop_collection__.html  fn.__get_all_collections__.html  fn.__get_all_datasources__.html  fn.__get_collection_schema__.html  fn.__get_container_status__.html  fn.__get_datasource__.html  fn.__get_scan_status__.html  fn.__get_single_collection__.html  fn.__get_workflow_status_tree__.html  fn.__list_directory__.html  fn.__scylla_row_count__.html  fn.__start_scan__.html  fn.__update_collection__.html  fn.__wait_for_scan_results__.html  fn._after_call.html  fn._before_call.html  fn.create_datasource.html  fn.create_new_collection.html  fn.db_explorer_run_query.html  fn.drop_collection.html  fn.flatten_result.html  fn.get_all_collections.html  fn.get_all_datasources.html  fn.get_collection_schema.html  fn.get_container_status.html  fn.get_datasource.html  fn.get_scan_status.html  fn.get_single_collection.html  fn.get_workflow_status_tree.html  fn.list_directory.html  fn.scylla_row_count.html  fn.start_scan.html  fn.truncate.html  fn.update_collection.html  fn.wait_for_scan_results.html  index.html  macro.server_wrapper!.html  (+3 more)
hoover3_client/app/: constant.FAVICON.html  fn.App.html  fn.nav_push_server_call_event.html  fn.read_server_call_history.html  fn.use_init_server_call_history.html  index.html  sidebar-items.js  struct.GlobalUrlContext.html  struct.ServerCallHistory.html
hoover3_client/assets/: main.css
hoover3_client/components/: fn.DynamicTable.html  fn.DynamicTableInner.html  fn.HtmlTable.html  fn.InfoCard.html  fn.PageTitle.html  fn.make_page_title.html  index.html  sidebar-items.js  struct.DynamicTableInnerProps.html  struct.DynamicTableProps.html  struct.HtmlTableProps_.html  struct.InfoCardProps_.html  struct.PageTitleProps.html  trait.DataRowDisplay.html
hoover3_client/errors/: index.html  sidebar-items.js  trait.AnyhowErrorDioxusExt.html
hoover3_client/pages/: enum.DatabaseExplorerRoute.html  fn.AdminHomePage.html  fn.CollectionAdminDetailsPage.html  fn.CollectionsAdminListPage.html  fn.DashboardIframePage.html  fn.DashboardNavbarDropdown.html  fn.DashboardsHomePage.html  fn.DatabaseExplorerPage.html  fn.DatabaseExplorerQueryToolPage.html  fn.DatabaseExplorerRootPage.html  fn.DatasourceAdminDetailsPage.html  fn.DioxusTranslatePage.html  fn.DockerHealthPage.html  fn.HomePage.html  fn.NewDatasourceFormPage.html  fn.ServerCallLogPage.html  fn.ToolsHomePage.html  fn.WorkflowStatusDisplay.html  index.html  sidebar-items.js  struct.CollectionAdminDetailsPageProps.html  struct.DashboardIframePageProps.html  struct.DatabaseExplorerPageProps.html  struct.DatabaseExplorerQueryToolPageProps.html  struct.DatasourceAdminDetailsPageProps.html  struct.NewDatasourceFormPageProps.html  struct.SqlQueryToolState.html  struct.WorkflowStatusDisplayProps.html
hoover3_client/routes/: enum.Route.html  fn.DisplayError.html  fn.Navbar.html  fn.NavbarDropdown.html  fn.NavbarLayout.html  fn.NavbarTitleCrumbs.html  fn.PageNotFound.html  index.html  sidebar-items.js  struct.DisplayErrorProps.html  struct.NavbarDropdownProps.html  struct.PageNotFoundProps.html  struct.UrlParam.html
hoover3_client/src/: app.rs  errors.rs  lib.rs  main.rs  time.rs
hoover3_client/time/: fn.current_time.html  fn.sleep.html  index.html  sidebar-items.js
hoover3_data_access/: Cargo.toml
hoover3_data_access/src/: data_access.rs
hoover3_database/: Cargo.toml  all.html  build.rs  index.html  macro.impl_model_callbacks!.html  macro.impl_model_callbacks.html  sidebar-items.js
hoover3_database/client_query/: index.html  sidebar-items.js
hoover3_database/db_management/: fn._test_db_session.html  fn.meilisearch_wait_for_task.html  fn.nebula_execute_retry.html  fn.with_redis_cache.html  fn.with_redis_lock.html  index.html  sidebar-items.js  struct.CollectionId.html  struct.DatabaseIdentifier.html  trait.DatabaseSpaceManager.html  type.ClickhouseDatabaseHandle.html  type.MeilisearchDatabaseHandle.html  type.NebulaDatabaseHandle.html  type.S3DatabaseHandle.html  type.ScyllaDatabaseHandle.html
hoover3_database/migrate/: fn._drop_collection.html  fn._migrate_collection.html  fn._migrate_common.html  fn._migrate_nebula_collection.html  fn.drop_collection.html  fn.get_collection_schema.html  fn.get_package_dir.html  fn.migrate_all.html  fn.migrate_collection.html  fn.migrate_common.html  fn.nebula_get_schema.html  fn.scylla_migrate_collection.html  index.html  sidebar-items.js
hoover3_database/models/: index.html  sidebar-items.js
hoover3_database/src/: lib.rs  migrate.rs  tracing.rs
hoover3_macro/: Cargo.toml  all.html  attr.activity.html  attr.workflow.html  index.html  sidebar-items.js
hoover3_macro/src/: lib.rs
hoover3_macro/tests/: tests.rs
hoover3_macro2/: Cargo.toml  all.html  fn.activity.html  fn.extract_activity_arg_type.html  fn.extract_activity_return_type.html  fn.extract_workflow_arg_type.html  fn.extract_workflow_return_type.html  fn.workflow.html  index.html  sidebar-items.js
hoover3_macro2/src/: lib.rs  model.rs  models.rs
hoover3_plugins/data_access/: Cargo.toml
hoover3_plugins/database_operations/: Cargo.toml
hoover3_server/: Cargo.toml
hoover3_tasks/: Cargo.toml
hoover3_tracing/: Cargo.toml  all.html  fn._init_logging_2.html  fn.init_logging.html  fn.init_tracing.html  index.html  sidebar-items.js
hoover3_types/: Cargo.toml  all.html  index.html  sidebar-items.js
(+896 files in other folders)
