[workspace]
resolver = "2"
members = [
    "hoover3_client",
    "hoover3_database",
    "hoover3_taskdef",
    "hoover3_macro",
    "hoover3_types",
    "tasks/filesystem_scanner",
    "hoover3_macro2",
    "hoover3_tracing",
]

[workspace.package]
repository = ""
version = "0.1.0"
authors = ["Liquid Investigations"]
edition = "2021"
publish = false
rust-version = "1.84.1"

[workspace.dependencies]
dioxus = { version = "0.6.2" }
dioxus-logger = "0.6.2"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
futures-util = "0.3.31"
chrono = {version="0.4.39",features=["serde"]}
serde = "1.0.217"
once_cell = "1.20.2"
tracing = { version = "0.1.41", features = ["log", "release_max_level_warn", "max_level_info"] }
serde_json = "1.0.137"
base64 = "0.22.1"
paste = "1.0.15"
bincode = "1.3.3"
axum =  "0.7.9"

async-std = "1.13.0"
log = { version = "0.4.25", features = ["release_max_level_warn", "max_level_info"] }
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
missing_crate_level_docs = "deny"


[profile.wasm-dev]
inherits = "dev"
opt-level = 1
debug = false

[profile.server-dev]
inherits = "dev"
debug = false

[profile.android-dev]
inherits = "dev"
debug = false

[profile.dev]
opt-level = 1
debug = false

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.dev.build-override]
opt-level = 3
codegen-units = 16
debug = false
