[workspace]
resolver = "2"
members = [
    "hoover3_client", "hoover3_data_access", "hoover3_database", "hoover3_tasks", "hoover3_types",
]

[workspace.package]
repository = ""
version = "0.1.0"
authors = ["Liquid Investigations"]
edition = "2021"
publish = false

[workspace.dependencies]
dioxus = { version = "0.6.1" }
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
futures-util = "0.3.31"
chrono = {version="0.4.39",features=["serde"]}
serde = "1.0.217"
log = "0.4.22"
once_cell = "1.20.2"
simple_logger = "5.0.0"
tracing = "0.1.41"


[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"



[profile.dev]
opt-level = 0
[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3
codegen-units = 16
debug = false # when possible
