[workspace]
resolver = "2"
members = [
    "hoover3_base/*",

    "hoover3_client",
    "hoover3_server",

    "hoover3_plugins/*",

    "packages/*",
]
exclude = ["third-party", "docker"]

[workspace.package]
repository = "https://github.com/liquidinvestigations/hoover3"
version = "0.1.0"
authors = ["Liquid Investigations"]
edition = "2021"
publish = false
rust-version = "1.84.1"

[workspace.dependencies]
# BASE PACKAGES
hoover3_types = {path = "hoover3_base/hoover3_types"}
hoover3_tracing = {path = "hoover3_base/hoover3_tracing"}
hoover3_macro = {path = "hoover3_base/hoover3_macro"}
hoover3_macro2 = {path = "hoover3_base/hoover3_macro2"}
hoover3_database = {path = "hoover3_base/hoover3_database"}
hoover3_taskdef = {path = "hoover3_base/hoover3_taskdef"}

# HOOVER3 CLIENT & SERVER
hoover3_client = {path = "hoover3_client"}
hoover3_server = {path = "hoover3_server"}

# HOOVER3 PLUGINS
hoover3_data_access = {path = "hoover3_plugins/data_access"}
hoover3_filesystem_scanner = {path = "hoover3_plugins/filesystem_scanner"}
hoover3_database_operations = {path = "hoover3_plugins/database_operations"}

# EXTERNAL PACKAGES
seekstorm_client = {path = "packages/seekstorm-client"}


dioxus = { version = "0.6.3" }
dioxus-logger = "0.6.2"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0.96"
futures-util = "0.3.31"
chrono = {version="0.4.40",features=["serde"]}
serde = {version = "1.0.218", features = ["derive", "rc"]}
once_cell = "1.20.3"
tracing = { version = "0.1.41", features = ["log", "release_max_level_warn", "max_level_info"] }
serde_json = "1.0.139"
base64 = "0.22.1"
paste = "1.0.15"
bincode = "1.3.3"
axum =  "0.7.9"
lazy_static = "1.5.0"

async-std = "1.13.0"
log = { version = "0.4.26", features = ["release_max_level_warn", "max_level_info"] }
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"

scylla = { version = "0.15.1", features = ["full-serialization"] }
scylla-cql = { version = "0.4.1", features = ["chrono-04", "serde"] }

charybdis = {git = "https://github.com/nodecosmos/charybdis", rev="f32238371ebb531cc77c0b75d9339e0249786989", features = ["migrate"]}
charybdis_macros = {git = "https://github.com/nodecosmos/charybdis", rev="f32238371ebb531cc77c0b75d9339e0249786989"}
charybdis-migrate = {git = "https://github.com/nodecosmos/charybdis", rev="f32238371ebb531cc77c0b75d9339e0249786989"}
charybdis_parser = {git = "https://github.com/nodecosmos/charybdis", rev="f32238371ebb531cc77c0b75d9339e0249786989"}

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
missing_crate_level_docs = "deny"


[profile.wasm-dev]
inherits = "dev"
opt-level = 1
debug = false

[profile.server-dev]
inherits = "dev"
debug = false

[profile.android-dev]
inherits = "dev"
debug = false

[profile.dev]
opt-level = 1
debug = false

[profile.dev.package."*"]
opt-level = 1
debug = false

[profile.dev.build-override]
opt-level = 3
codegen-units = 16
debug = false

[profile.test]
inherits = "dev"
debug = false
