[package]
name = "hoover3_client"
repository = {workspace = true}
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}
publish  = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hoover3_database = {path="../hoover3_database",optional=true}
hoover3_taskdef = {path="../hoover3_taskdef",optional=true}
hoover3_types  = {path="../hoover3_types"}
hoover3_tracing = {path="../hoover3_tracing"}
hoover3_filesystem_scanner = {path="../tasks/filesystem_scanner",optional=true}

axum = {workspace = true, optional=true}
dioxus = { workspace = true, features = ["router", "fullstack"] }
# dioxus-lazy = { workspace = true}
tokio = { workspace = true, optional=true}
anyhow = {workspace = true}

paste.workspace = true
web-time = { version = "1.1.0", features = ["serde"] }
dioxus-sdk = { version = "0.6.0", features = ["storage"] }
serde = { workspace = true, features = ["derive"] }
dioxus-logger.workspace = true
serde-aux = "4.5.0"
serde_json.workspace = true
chrono.workspace = true
base64.workspace = true
ciborium = "0.2.2"
futures-util.workspace = true
log.workspace = true
async-std.workspace = true
tracing-log.workspace = true
tracing-web = "0.1.3"
tracing.workspace = true

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "dep:tokio",
    "dep:hoover3_database",
    "dep:axum",
    "dep:hoover3_taskdef",
    "dep:hoover3_filesystem_scanner"
    ]
