[package]
name = "hoover3_client"
repository = {workspace = true}
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}
publish  = {workspace = true}
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "hoover3_client"

[[bin]]
name = "hoover3_client_main"
path = "src/main.rs"

[dependencies]
hoover3_types  = {workspace = true}
hoover3_tracing = {workspace = true}
hoover3_database = {workspace = true, optional=true}
hoover3_taskdef = {workspace = true, optional=true}
hoover3_server = {workspace = true, optional=true}

axum = {workspace = true, optional=true}
dioxus = { workspace = true, features = ["router", "fullstack"] }
# dioxus-lazy = { workspace = true}
tokio = { workspace = true, optional=true}
anyhow = {workspace = true}

paste.workspace = true
web-time = { version = "1.1.0", features = ["serde"] }
dioxus-sdk = { version = "0.6.0", features = ["storage", "timing"] }
serde = { workspace = true, features = ["derive"] }
dioxus-logger.workspace = true
serde-aux = "4.5.0"
serde_json.workspace = true
chrono.workspace = true
base64.workspace = true
ciborium = "0.2.2"
futures-util.workspace = true
async-std = {workspace = true, features=["unstable", "default"]}
regex = "1.11.1"
web-sys = { version = "0.3.77", features = ["Element", "Window", "PopStateEvent"] }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "dep:tokio",
    "dep:hoover3_database",
    "dep:axum",
    "dep:hoover3_taskdef",
    "dep:hoover3_server",
    ]
