[package]
name = "hoover3_data_access"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
opendal = { version = "0.51.1", features = ["services-fs"] }
hoover3_types  = {path="../hoover3_types"}
hoover3_database  = {path="../hoover3_database"}
serde = {workspace=true, features = ["serde_derive"]}
anyhow = {workspace = true}
tokio = {workspace = true}
chrono = {workspace = true}
tracing.workspace=true
