[package]
name = "hoover3_database"
repository = {workspace = true}
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}
publish  = {workspace = true}


[dependencies]
hoover3_types  = {path="../hoover3_types"}

### CLI
rustyline = "9"
rustyline-derive = "0.6.0"

########## COMMON ############
##############################
tokio = {workspace = true}
futures= {workspace = true}
anyhow = {workspace = true}
futures-util = {workspace = true}
once_cell= {workspace = true}
chrono = {workspace = true}
tracing.workspace=true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.132"
bincode = "1.3.3"


########## PYTHON ############
##############################
# pyo3 = { version = "0.22", features = ["experimental-async"] }
# pyo3-asyncio = { version = "0.18", features = ["attributes", "tokio-runtime"] }
# pyo3 = {git = "https://github.com/wyfo/pyo3", branch = "allow_threads", features = ["experimental-async"] }

########## SCYLLA ############
##############################
scylla = { version = "0.15.1", features = ["full-serialization"] }
charybdis = {version="0.7.11", features = ["migrate"]}
charybdis_macros = "0.7.11"
charybdis-migrate = "0.7.12"



########## NEBULA ############
##############################
fbthrift-transport = { version = "0.9", features = ["impl_tokio"] }
nebula-client = { version = "0.7", features = ["graph","storage","meta"] }
bb8 = { version = "0.8" }
bb8-nebula = { version = "0.9", features = ["graph"]}
async-compat = {version = "0.2.4"}

########## CLICKHOUSE ########
##############################
clickhouse = "0.12.0"

########## SEAWEEDFS  ########
##############################
rusty_weed = "0.1.3"

########## meilisearch  ########
##############################
meilisearch-sdk = "0.27.1"

########## s3 ############
##############################
rust-s3 = "0.35.1"

############# REDIS ############
##############################
redis = {version="0.27.5", features = ["aio", "tokio-comp"] }
rslock = { version = "0.6.0", features = ["tokio-comp"], default-features = false }
stable-hash = "0.4.3"
tracing-subscriber = "0.3.19"
