[package]
name = "hoover3_database"
repository = {workspace = true}
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}
publish  = {workspace = true}
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hoover3_types  = {path="../hoover3_types"}
hoover3_tracing = {path="../hoover3_tracing"}

########## COMMON ############
##############################
tokio = {workspace = true}
futures= {workspace = true}
anyhow = {workspace = true}
futures-util = {workspace = true}
once_cell= {workspace = true}
chrono = {workspace = true}
tracing.workspace=true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bincode.workspace = true
tracing-subscriber.workspace = true
log.workspace = true
tracing-log.workspace = true


### CLI
rustyline = "9"
rustyline-derive = "0.6.0"



########## PYTHON ############
##############################
# pyo3 = { version = "0.22", features = ["experimental-async"] }
# pyo3-asyncio = { version = "0.18", features = ["attributes", "tokio-runtime"] }
# pyo3 = {git = "https://github.com/wyfo/pyo3", branch = "allow_threads", features = ["experimental-async"] }

########## SCYLLA ############
##############################
scylla = { version = "0.15.1", features = ["full-serialization"] }
charybdis = {path="../third-party/charybdis/charybdis", features = ["migrate"]}
charybdis_macros = {path="../third-party/charybdis/charybdis-macros"}
charybdis-migrate = {path="../third-party/charybdis/charybdis-migrate"}
charybdis_parser = {path="../third-party/charybdis/charybdis-parser"}
scylla-cql = { version = "0.4.1", features = ["chrono-04", "serde"] }


########## NEBULA ############
##############################
# not nebula
fbthrift-transport = { version = "0.9", features = ["impl_tokio"] }
bb8 = { version = "0.8" }
async-compat = {version = "0.2.4"}

# nebula original
nebula-fbthrift-common-v3 = {version = "0.3.0"}
bb8-nebula = { version = "0.9", features = ["graph"]}
nebula-client = { version = "0.7", features = ["graph","storage","meta"] }

# nebula forks
# bb8-nebula = { path = "../third-party/nebula-rust/bb8-nebula", features = ["graph"]}
# nebula-client = { path = "../third-party/nebula-rust/nebula-client", features = ["graph","storage","meta"] }


########## CLICKHOUSE ########
##############################
clickhouse = "0.12.0"

########## SEAWEEDFS  ########
##############################
rusty_weed = "0.1.3"

########## meilisearch  ########
##############################
meilisearch-sdk = "0.27.1"

########## s3 ############
##############################
rust-s3 = "0.35.1"

############# REDIS ############
##############################
redis = {version="0.27.5", features = ["aio", "tokio-comp"] }
rslock = { version = "0.6.0", features = ["tokio-comp"], default-features = false }


########### SEEKSTORM ############
##############################
seekstorm_client = { path = "../packages/seekstorm-client" }


[build-dependencies]
serde_json = "1.0.100"
charybdis_parser = {path="../third-party/charybdis/charybdis-parser"}