[package]
name = "hoover3_macro"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
hoover3_macro2 = { path = "../hoover3_macro2" }

[dev-dependencies]

# Macrotest is a mess:
# - Official version works if all compiles ok, but doesnt print errors, it just skips expansion:
macrotest = "1.0.13"
# - 2021 Fork version prints errors, but doesn't work
# macrotest = {git = "https://github.com/eupn/macrotest", rev="385c4bdadb63fa44141aa96685de7206041116bb"}

hoover3_taskdef = { path = "../hoover3_taskdef" }