[package]
name = "hoover3_macro2"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
proc-macro-crate = "3.2.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full","extra-traits"] }
