[package]
name = "hoover3_tasks"
repository = {workspace = true}
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}
publish  = {workspace = true}


[dependencies]
# common
tokio = {workspace = true}
futures= {workspace = true}
anyhow = {workspace = true}
futures-util = {workspace = true}
once_cell= {workspace = true}

# temporal
temporal-client = { git = "https://github.com/temporalio/sdk-core" , rev = "6e4079151d583afa14180a405785d5420513804e" }
temporal-sdk = { git = "https://github.com/temporalio/sdk-core" , rev = "6e4079151d583afa14180a405785d5420513804e"}
temporal-sdk-core = { git = "https://github.com/temporalio/sdk-core" , rev = "6e4079151d583afa14180a405785d5420513804e"}
temporal-sdk-core-api = { git = "https://github.com/temporalio/sdk-core" , rev = "6e4079151d583afa14180a405785d5420513804e"}
temporal-sdk-core-protos = { git = "https://github.com/temporalio/sdk-core" , rev = "6e4079151d583afa14180a405785d5420513804e"}
prost-wkt-types = "0.6.0"
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
paste.workspace = true
buildid = "1.0.3"
