[package]
name = "hoover3_database"
repository = {workspace = true}
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}
publish  = {workspace = true}
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hoover3_types.workspace = true

########## COMMON ############
##############################
tokio = {workspace = true}
futures= {workspace = true}
anyhow = {workspace = true}
futures-util = {workspace = true}
# once_cell= {workspace = true}
chrono = {workspace = true}
tracing.workspace=true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bincode.workspace = true
# tracing-subscriber.workspace = true
# log.workspace = true
# tracing-log.workspace = true
lazy_static.workspace = true
paste.workspace = true
inventory.workspace = true


########## PYTHON ############
##############################
# pyo3 = { version = "0.22", features = ["experimental-async"] }
# pyo3-asyncio = { version = "0.18", features = ["attributes", "tokio-runtime"] }
# pyo3 = {git = "https://github.com/wyfo/pyo3", branch = "allow_threads", features = ["experimental-async"] }

########## SCYLLA ############
##############################
scylla.workspace = true
# scylla-cql.workspace = true
# charybdis = {path="../third-party/charybdis/charybdis", features = ["migrate"]}
# charybdis_macros = {path="../third-party/charybdis/charybdis-macros"}
# charybdis-migrate = {path="../third-party/charybdis/charybdis-migrate"}
# charybdis_parser = {path="../third-party/charybdis/charybdis-parser"}
# charybdis_parser.workspace = true
charybdis.workspace = true
# charybdis_macros.workspace = true
# charybdis-migrate.workspace = true


########## CLICKHOUSE ########
##############################
clickhouse = "0.12.0"

########## SEAWEEDFS  ########
##############################
# rusty_weed = "0.1.3"

########## meilisearch  ########
##############################
meilisearch-sdk = "0.27.1"

########## s3 ############
##############################
rust-s3 = "0.35.1"

############# REDIS ############
##############################
redis = {version="0.27.5", features = ["aio", "tokio-comp"] }
rslock = { version = "0.6.0", features = ["tokio-comp"], default-features = false }


########### SEEKSTORM ############
##############################
seekstorm_client.workspace = true

########### OTHERS ############
##############################
async-stream.workspace = true

[dev-dependencies]
hoover3_tracing = { workspace = true, features = ["telemetry"] }
hoover3_macro.workspace = true