[package]
name = "hoover3_macro2"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
darling = "0.20.10"
# proc-macro-crate = "3.2.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full","extra-traits"] }
hoover3_types.workspace = true
convert_case = "0.7.1"
prettyplease = "0.2.29"

[dev-dependencies]
pretty_assertions = "1.4.1"
