[package]
name = "hoover3_tracing"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
dioxus-logger.workspace = true
log.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry-appender-log.workspace = true
tracing-opentelemetry.workspace = true

anyhow.workspace = true
cap = "0.1.2"
