[package]
name = "hoover3_tracing"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
dioxus-logger.workspace = true
log.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
cap = "0.1.2"
getrandom3 = {version = "=0.3.2", package = "getrandom", features = ["wasm_js"] }
# getrandom2 = {version = "=0.2.1", package = "getrandom", features = ["js"] }

opentelemetry = { version = "0.29.0", optional = true }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio", "trace"], optional = true }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "trace", "logs"], optional = true }
opentelemetry-semantic-conventions = { version = "0.29.0", optional = true }
opentelemetry-appender-log = { version = "0.29.0", optional = true }
tracing-opentelemetry = { version = "0.30.0", optional = true }
tonic = { version = "0.12.3", features = ["tls-roots"], optional = true }

[features]
default = []
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:opentelemetry-appender-log",
    "dep:tracing-opentelemetry",
]