[package]
name = "hoover3_types"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = {workspace=true, features = ["serde_derive"]}
regex = "1.11.1"
anyhow.workspace = true
stable-hash = "0.4.3"
chrono.workspace = true
bincode.workspace = true
serde_json.workspace = true
cap = "0.1.2"
inventory = "0.3.19"
lazy_static.workspace = true
tracing.workspace = true
