[package]
name = "hoover3_database_operations"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
name = "hoover3_database_operations"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
charybdis.workspace = true
hoover3_database.workspace = true
hoover3_macro.workspace = true
hoover3_types.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
