[package]
name = "hoover3_filesystem_scanner"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
name = "hoover3_filesystem_scanner"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
futures.workspace = true
hoover3_database.workspace = true
hoover3_taskdef.workspace = true
hoover3_types.workspace = true
hoover3_tracing.workspace = true
hoover3_macro.workspace = true
hoover3_data_access.workspace = true
serde.workspace = true
tokio.workspace = true
anyhow.workspace = true
charybdis.workspace = true
serde_json.workspace = true
scylla.workspace = true
md5 = "0.7.0"
sha1 = "0.10.6"
sha3 = "0.10.8"
sha2 = "0.10.8"
