[package]
name = "hoover3_data_access"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
charybdis.workspace = true
futures.workspace = true
hoover3_database = {path="../../hoover3_database"}
hoover3_macro = {path="../../hoover3_macro"}
hoover3_types = {path="../../hoover3_types"}
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
scylla.workspace = true
chrono.workspace = true

[lints]
workspace = true
