[package]
name = "hoover3_filesystem_scanner"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
futures.workspace = true
hoover3_database = {path="../../hoover3_database"}
hoover3_taskdef = {path="../../hoover3_taskdef"}
hoover3_types = {path="../../hoover3_types"}
hoover3_tracing = {path="../../hoover3_tracing"}
serde.workspace = true
tokio.workspace = true
